--- a/.github/workflows/generate-readme.yaml
+++ b/.github/workflows/generate-readme.yaml
@@ -12,12 +12,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install tree
-        run: |
-          sudo apt-get update && sudo apt-get install -y tree
-
       - name: Print workspace path
         run: |
           echo "Workspace directory: ${{ github.workspace }}"
           find .
-          tree
+
+      - name: Generate README
+        uses: mikeschinkel/readme-merge@main
