--- a/.github/workflows/generate-readme.yaml
+++ b/.github/workflows/generate-readme.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate README
-        uses: mikeschinkel/readme-merge@main
+        uses: mikeschinkel/readme-merge@0.0.1
