--- a/.github/workflows/generate-readme.yaml
+++ b/.github/workflows/generate-readme.yaml
@@ -11,6 +11,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            README.md
+            md
+            md/**
 
       - name: Generate README
-        uses: mikeschinkel/readme-merge@0.0.8
+        uses: mikeschinkel/readme-merge@0.0.9
