--- a/.github/workflows/generate-readme.yaml
+++ b/.github/workflows/generate-readme.yaml
@@ -13,4 +13,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate README
-        uses: mikeschinkel/readme-merge@0.0.14
+        uses: mikeschinkel/readme-merge@0.0.15
+        with:
+          index_filepath: './md/_index.md'
+          readme_dir: '.'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
