--- a/.github/workflows/generate-readme.yaml
+++ b/.github/workflows/generate-readme.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate README
-        uses: mikeschinkel/readme-merge@0.0.15
+        uses: mikeschinkel/readme-merge@main
         with:
           index_filepath: './md/_index.md'
           readme_dir: '.'
